--- a/style/md.css
+++ b/style/md.css
@@ -1,6 +1,6 @@
 @media (min-width: 768px) and (max-width: 991px) {
     footer {
-        display: none;
+        display: block;
     }
 
     .btn-order {
@@ -98,42 +98,36 @@
         z-index: 2;
     }
 
-    .coin-1 {
+    .big-phone {
         z-index: 3;
         position: absolute;
+        width: 800px;
+        height: 885px;
+        left: -193px;
+        top: -210px;
+        background: url('../images/smart.png');
+        background-size: cover;
+    }
+
+    .coin-1 {
         width: 160px;
         height: 148px;
-        left: 250px;
-        top: 40px;
-        background: url('../images/coin1.svg');
-        transform: rotate(1deg);
-        background-size: cover;
+        right: 190px;
+        top: 230px;
     }
 
     .coin-2 {
-        z-index: 1;
-        position: absolute;
         width: 132px;
         height: 150px;
-        left: 245px;
-        top: 326px;
-        background: url('../images/coin22.png') no-repeat;
-        background-size: contain;
-        /* transform: rotate(1deg); */
+        right: 220px;
+        bottom: 200px;
     }
 
     .coin-3 {
-        z-index: 3;
-        background-size: cover;
-        z-index: 4;
-        position: absolute;
-        width: 128px;
-        height: 128px;
-        left: 19px;
-        top: 180px;
-        background: url('../images/coin3.svg');
-        background-size: cover;
-        /* transform: rotate(-8.35deg); */
+        width: 150px;
+        height: 150px;
+        left: 152px;
+        bottom: 252px;
     }
 
     .primary-screen-end-block::before {
@@ -208,7 +202,6 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 800;
-        font-size: 42px;
         line-height: 110%;
         text-align: left;
         text-transform: uppercase;
@@ -1417,8 +1410,8 @@
     }
 
     .card-about {
-        width: 215px;
-        margin: 0 auto 40px;
+        width: 220px;
+        margin: inherit;
     }
 
     .in-card-about {
@@ -1433,9 +1426,8 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 800;
-        font-size: 18px;
-        line-height: 22px;
-
+        font-size: 24px;
+        line-height: 28px;
         color: #FFFFFF;
         text-transform: uppercase;
         margin-bottom: 20px;
@@ -1562,7 +1554,6 @@
         left: 50%;
         margin-left: -260px;
         top: 20px;
-        background: url('../images/laptop.svg') no-repeat;
         background-size: contain;
     }
 
@@ -1573,8 +1564,6 @@
         left: 50%;
         margin-left: -260px;
         top: -3px;
-        background: url('../images/arrow-lg.svg') no-repeat;
-        background-size: contain;
     }
 
     #work {
@@ -1605,29 +1594,21 @@
 
     .work-box {
         padding: 0px 0 0px;
-        height: 380px;
+        height: 420px;
         position: relative;
     }
 
     .work-box .work-box-start {
         padding-top: 5px;
         position: relative;
-        height: 335px;
+        height: 380px;
         margin-top: 5px;
     }
 
     .work-first::before {
         content: '';
-        position: absolute;
-        width: 334.94px;
-        height: 334.94px;
-        left: 50%;
-        margin-left: -167px;
-        top: 0px;
-        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(5.63284px);
-        border-radius: 19.4731px;
-        z-index: -1;
+        width: 0;
+        height: 0;
     }
 
     .work-box-first::before {
@@ -1647,19 +1628,38 @@
         position: relative;
         width: 326px;
         height: 326px;
-        left: 50%;
-        margin-left: -210px;
         top: 0px;
-        border-radius: 11.8586px;
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        border-radius: 11px;
+    }
+
+    .work-box-image {
+        position: relative;
+        width: 350px;
+        height: 350px;
+        /* left: 15px;
+        top: 65px; */
+        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(11px);
+        border-radius: 34px;
+        z-index: -1;
+    }
+    
+    .work-image {
+        overflow: hidden;
+    }
+    
+    .work-box-image img {
+        position: relative;
+        z-index: 3;
     }
 
     .work-bounce-sm {
         position: absolute;
-        width: 326.57px;
-        height: 326.11px;
-        left: calc(50% - 326.57px/2 + 0.09px);
-        top: calc(50% - 326.11px/2 + 1.57px);
+        width: 350px;
+        height: 350px;
+        left: 50%;
+        margin-left: -175px;
+        top: 0;
         background: rgba(76, 93, 244, 0.5);
         filter: blur(60.479px);
         z-index: -1;
@@ -1668,7 +1668,11 @@
     .work-box-first .work-box-end,
     .work-box-third .work-box-end {
         padding: 0 30px 0;
-        margin-top: 25px;
+        margin-top: 75px;
+    }
+
+    .work-second .work-box-image {
+        margin-left: auto;
     }
 
     .work-box-end .pre-text {
@@ -1709,7 +1713,7 @@
 
     .work-box-second .work-box-end {
         padding: 0 30px 0;
-        margin-top: 25px;
+        margin-top: 75px;
     }
 
     .work-box-second::before {
@@ -1727,25 +1731,14 @@
 
     .work-second::before {
         content: '';
-        position: absolute;
-        width: 334.94px;
-        height: 334.94px;
-        left: 50%;
-        margin-left: -167px;
-        top: 0px;
-        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(5.63284px);
-        border-radius: 19.4731px;
-        z-index: -1;
+        width: 0;
+        height: 0;
     }
 
     .work-second img {
         position: relative;
-        width: 326px;
-        height: 326px;
-        left: 50%;
-        margin-left: -160px;
-        top: 0px;
+        width: 350px;
+        height: 350px;
         border-radius: 11px;
     }
 
@@ -1755,7 +1748,7 @@
 
     .work-box-third .work-box-end {
         padding: 0 30px 0;
-        margin-top: 25px;
+        margin-top: 110px;
     }
 
     .work-box-third::before {
@@ -1780,21 +1773,23 @@
 
 
     .work-card {
-        width: 220px;
+        width: 250px;
         background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
         backdrop-filter: blur(5.46288px);
         border-radius: 12px;
         z-index: 1;
         position: relative;
-        left: 50%;
-        margin-left: -150px;
     }
 
     .work-card .card-image {
         width: 100%;
-        height: 170px;
+        height: 190px;
         background: linear-gradient(78.84deg, rgba(169, 148, 255, 0.65) 0%, rgba(62, 35, 169, 0.21) 98.69%);
         border-radius: 11px 11px 0px 0px;
+    }
+
+    .work-card-img {
+        width: 100%;
     }
 
     .card-img,
@@ -1832,8 +1827,8 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 500;
-        font-size: 17px;
-        line-height: 26px;
+        font-size: 22px;
+        line-height: 28px;
         color: #FFFFFF;
     }
 
@@ -1841,9 +1836,9 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 8px;
-        line-height: 12px;
-        max-width: 295px;
+        font-size: 12px;
+        line-height: 16px;
+        max-width: 230px;
         color: #D1D1D1;
     }
 
@@ -1854,7 +1849,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 600;
-        font-size: 11px;
+        font-size: 14px;
         line-height: 29px;
         letter-spacing: 0.2em;
         text-transform: uppercase;
@@ -1866,10 +1861,10 @@
     .work-card-copy {
         position: absolute;
         width: 220px;
-        height: 358px;
+        height: 270px;
         left: 50%;
-        margin-left: -50px;
-        top: 4px;
+        margin-left: -40px;
+        top: 10px;
         transform: scale(0.9);
         background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
         opacity: 0.5;
@@ -1881,8 +1876,11 @@
 
     .card-section {
         margin-top: 30px;
-        height: 900px;
+        height: auto;
         position: relative;
+    }
+    .card-section-box {
+        margin-bottom: 20px;
     }
 
     .card-section::before {
@@ -1964,7 +1962,6 @@
         -webkit-text-fill-color: transparent;
         background-clip: text;
         mix-blend-mode: normal;
-        text-align: center;
     }
 
     .card-invite.card-invite-first p.description {
@@ -1989,12 +1986,11 @@
         font-weight: 300;
         font-size: 18px;
         line-height: 27px;
+        color: #FFFFFF;
         letter-spacing: 0.18em;
         text-transform: uppercase;
-        background: linear-gradient(78.84deg, rgba(72, 123, 255, 0.357) 0%, rgba(65, 65, 65, 0.147) 98.69%), #FFFFFF;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
+        /* background: linear-gradient(78.84deg, rgba(72, 123, 255, 0.357) 0%, rgba(65, 65, 65, 0.147) 98.69%), #FFFFFF; */
+       
     }
 
     .card-invite span.lines-level {
@@ -2114,9 +2110,7 @@
     }
 
     ul.nav-tabs-map {
-        margin-top: 40px;
-        display: flex;
-        flex-wrap: nowrap;
+        margin-top: 190px;
     }
 
     ul.nav-tabs-map li.nav-item {
@@ -2124,7 +2118,7 @@
         text-align: right;
         display: inline-block;
         width: 100%;
-        display: flex;
+        margin-bottom: 30px;
         justify-content: space-between;
     }
 
